完成用转换开关控制数值选择器的出现来选择更新时间频率

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,13 @@
             android:enabled="true"
             android:exported="true" />
 
+        <receiver android:name=".LocalReceiver">
+            <intent-filter>
+                <action android:name="com.coolweather.android.MYUPDATEBROADCAST" />
+            </intent-filter>
+
+        </receiver>
+
         <activity android:name=".SetActivity"></activity>
     </application>
 
