添加常用查询城市，但是还没有完成相应点击事件的直接跳转

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,10 +29,10 @@
             <intent-filter>
                 <action android:name="com.coolweather.android.MYUPDATEBROADCAST" />
             </intent-filter>
-
         </receiver>
 
-        <activity android:name=".SetActivity"></activity>
+        <activity android:name=".SetActivity" />
+        <activity android:name=".CityActivity"></activity>
     </application>
 
 </manifest>
