优化了UI界面，实现了常用城市列表的直接动画切换，但是手势识别还没有完成，是用两个按钮切换的，而且现在还存在非常用城市的点击查询不能用的bug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     // 加载和展示图片
     compile 'com.android.support:recyclerview-v7:24.2.0'
     compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:support-v4:24.2.0'
+    compile 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.2.1'
 }
